# excellent-quote

./: LICENSE.txt  README.md  pyproject.toml  quote_cli.py
excellent_quote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
